looking at summer2020 approach

--- a/src/Summer-2020-approach/AI-corpus-creation-CO.ipynb
+++ b/src/Summer-2020-approach/AI-corpus-creation-CO.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dab3dj/.conda/envs/CO_BERT/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pull in entire dataframe\n",
     "\n",
-    "df = pd.read_pickle(\"~/dspg20RnD/data/final/final_dataset_7-20.pkl\")\n",
+    "df = pd.read_pickle(\"/home/dab3dj/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset.pkl\")\n",
     "\n",
     "df.reset_index(inplace = True)\n",
     "#df.rename(columns={'index':'original index'}, inplace=True)"
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,15 +101,15 @@
        "      <th>AGENCY</th>\n",
        "      <th>IC_CENTER</th>\n",
        "      <th>...</th>\n",
-       "      <th>working_abstract</th>\n",
-       "      <th>Start_Char</th>\n",
+       "      <th>BUDGET_START_DATE</th>\n",
+       "      <th>BUDGET_END_DATE</th>\n",
+       "      <th>CFDA_CODE</th>\n",
+       "      <th>FY.y</th>\n",
+       "      <th>FY_TOTAL_COST</th>\n",
+       "      <th>FY_TOTAL_COST_SUB_PROJECTS</th>\n",
+       "      <th>ORG_COUNT</th>\n",
+       "      <th>PI_COUNT</th>\n",
        "      <th>nchar</th>\n",
-       "      <th>LAST_CHAR</th>\n",
-       "      <th>lemma_abstract</th>\n",
-       "      <th>clean_lemmas</th>\n",
-       "      <th>stopwds_removed</th>\n",
-       "      <th>n_grams_added</th>\n",
-       "      <th>final_tokens</th>\n",
        "      <th>final_frqwds_removed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -118,15 +127,15 @@
        "      <td>NIH</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>The multiprotein complex y-secretase proteolyt...</td>\n",
-       "      <td>T</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.866</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>3483.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1402</td>\n",
-       "      <td>g</td>\n",
-       "      <td>[multiprotein, complex, y-secretase, proteolyt...</td>\n",
-       "      <td>[multiprotein, complex, y-secretase, proteolyt...</td>\n",
-       "      <td>[multiprotein, complex, y-secretase, proteolyt...</td>\n",
-       "      <td>[multiprotein, complex, y-secretase, proteolyt...</td>\n",
-       "      <td>[multiprotein, complex, y_secretase, proteolyt...</td>\n",
        "      <td>[multiprotein, y_secretase, proteolytically_cl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -142,15 +151,15 @@
        "      <td>NIH</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>The Kissl gene encodes peptides called kisspep...</td>\n",
-       "      <td>T</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.865</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>39175.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2553</td>\n",
-       "      <td>y</td>\n",
-       "      <td>[Kissl, gene, encode, peptide, call, kisspepti...</td>\n",
-       "      <td>[kissl, gene, encode, peptide, call, kisspepti...</td>\n",
-       "      <td>[kissl, gene, encode, peptide, kisspeptin, bin...</td>\n",
-       "      <td>[kissl, gene, encode, peptide, kisspeptin, bin...</td>\n",
-       "      <td>[kissl, gene, encode, peptide, kisspeptin, bin...</td>\n",
        "      <td>[kissl, gene, encode, peptide, kisspeptin, bin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -166,15 +175,15 @@
        "      <td>NIH</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>The objective of this research is to understan...</td>\n",
-       "      <td>T</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.859</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>49646.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1414</td>\n",
-       "      <td>e</td>\n",
-       "      <td>[objective, research, be, understand, biophysi...</td>\n",
-       "      <td>[objective, research, be, understand, biophysi...</td>\n",
-       "      <td>[objective, research, understand, biophysical,...</td>\n",
-       "      <td>[objective, research, understand, biophysical,...</td>\n",
-       "      <td>[objective, research, understand, biophysical,...</td>\n",
        "      <td>[biophysical, basis, thermodynamics_kinetic, m...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,15 +199,15 @@
        "      <td>NIH</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Obesity is the cause of many adverse pregnancy...</td>\n",
-       "      <td>O</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.361</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>20406.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1545</td>\n",
-       "      <td>d</td>\n",
-       "      <td>[obesity, cause, many, adverse, pregnancyoutco...</td>\n",
-       "      <td>[obesity, cause, many, adverse, pregnancyoutco...</td>\n",
-       "      <td>[obesity, cause, adverse, pregnancyoutcome, re...</td>\n",
-       "      <td>[obesity, cause, adverse_pregnancyoutcome, res...</td>\n",
-       "      <td>[obesity, cause, adverse_pregnancyoutcome, res...</td>\n",
        "      <td>[obesity, adverse_pregnancyoutcome, great, hea...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -214,20 +223,20 @@
        "      <td>NIFA</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Local potato advisory groups have expressed in...</td>\n",
-       "      <td>L</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.203</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>271</td>\n",
-       "      <td>s</td>\n",
-       "      <td>[local, potato, advisory, group, express, inte...</td>\n",
-       "      <td>[local, potato, advisory, group, express, inte...</td>\n",
-       "      <td>[local, potato, advisory, group, express, inte...</td>\n",
-       "      <td>[local, potato, advisory, group, express, inte...</td>\n",
-       "      <td>[local, potato, advisory, group, express, inte...</td>\n",
        "      <td>[local, potato, advisory, express, interest, m...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -259,54 +268,19 @@
        "3   OBESITY ON VAGAL TONE AND HBA1C DURING PREGNANCY        HHS    NIH   \n",
        "4  PLANT-PARASITIC NEMATODE MANAGEMENT AS A COMPO...       USDA   NIFA   \n",
        "\n",
-       "  IC_CENTER  ...                                   working_abstract  \\\n",
-       "0       NaN  ...  The multiprotein complex y-secretase proteolyt...   \n",
-       "1       NaN  ...  The Kissl gene encodes peptides called kisspep...   \n",
-       "2       NaN  ...  The objective of this research is to understan...   \n",
-       "3       NaN  ...  Obesity is the cause of many adverse pregnancy...   \n",
-       "4       NaN  ...  Local potato advisory groups have expressed in...   \n",
+       "  IC_CENTER  ... BUDGET_START_DATE BUDGET_END_DATE CFDA_CODE  FY.y  \\\n",
+       "0       NaN  ...               NaN             NaN    93.866  2008   \n",
+       "1       NaN  ...               NaN             NaN    93.865  2008   \n",
+       "2       NaN  ...               NaN             NaN    93.859  2008   \n",
+       "3       NaN  ...               NaN             NaN    93.361  2008   \n",
+       "4       NaN  ...               NaN             NaN    10.203  2010   \n",
        "\n",
-       "  Start_Char nchar LAST_CHAR  \\\n",
-       "0          T  1402         g   \n",
-       "1          T  2553         y   \n",
-       "2          T  1414         e   \n",
-       "3          O  1545         d   \n",
-       "4          L   271         s   \n",
-       "\n",
-       "                                      lemma_abstract  \\\n",
-       "0  [multiprotein, complex, y-secretase, proteolyt...   \n",
-       "1  [Kissl, gene, encode, peptide, call, kisspepti...   \n",
-       "2  [objective, research, be, understand, biophysi...   \n",
-       "3  [obesity, cause, many, adverse, pregnancyoutco...   \n",
-       "4  [local, potato, advisory, group, express, inte...   \n",
-       "\n",
-       "                                        clean_lemmas  \\\n",
-       "0  [multiprotein, complex, y-secretase, proteolyt...   \n",
-       "1  [kissl, gene, encode, peptide, call, kisspepti...   \n",
-       "2  [objective, research, be, understand, biophysi...   \n",
-       "3  [obesity, cause, many, adverse, pregnancyoutco...   \n",
-       "4  [local, potato, advisory, group, express, inte...   \n",
-       "\n",
-       "                                     stopwds_removed  \\\n",
-       "0  [multiprotein, complex, y-secretase, proteolyt...   \n",
-       "1  [kissl, gene, encode, peptide, kisspeptin, bin...   \n",
-       "2  [objective, research, understand, biophysical,...   \n",
-       "3  [obesity, cause, adverse, pregnancyoutcome, re...   \n",
-       "4  [local, potato, advisory, group, express, inte...   \n",
-       "\n",
-       "                                       n_grams_added  \\\n",
-       "0  [multiprotein, complex, y-secretase, proteolyt...   \n",
-       "1  [kissl, gene, encode, peptide, kisspeptin, bin...   \n",
-       "2  [objective, research, understand, biophysical,...   \n",
-       "3  [obesity, cause, adverse_pregnancyoutcome, res...   \n",
-       "4  [local, potato, advisory, group, express, inte...   \n",
-       "\n",
-       "                                        final_tokens  \\\n",
-       "0  [multiprotein, complex, y_secretase, proteolyt...   \n",
-       "1  [kissl, gene, encode, peptide, kisspeptin, bin...   \n",
-       "2  [objective, research, understand, biophysical,...   \n",
-       "3  [obesity, cause, adverse_pregnancyoutcome, res...   \n",
-       "4  [local, potato, advisory, group, express, inte...   \n",
+       "  FY_TOTAL_COST FY_TOTAL_COST_SUB_PROJECTS ORG_COUNT PI_COUNT nchar  \\\n",
+       "0        3483.0                        NaN         1        1  1402   \n",
+       "1       39175.0                        NaN         1        1  2553   \n",
+       "2       49646.0                        NaN         1        1  1414   \n",
+       "3       20406.0                        NaN         1        1  1545   \n",
+       "4           NaN                        NaN         1        1   271   \n",
        "\n",
        "                                final_frqwds_removed  \n",
        "0  [multiprotein, y_secretase, proteolytically_cl...  \n",
@@ -315,10 +289,10 @@
        "3  [obesity, adverse_pregnancyoutcome, great, hea...  \n",
        "4  [local, potato, advisory, express, interest, m...  \n",
        "\n",
-       "[5 rows x 40 columns]"
+       "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,11 +428,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -469,7 +441,7 @@
        "'\\ndef create_stopwords():\\n      \\n    \"\"\" creates list of stopwords. stop words include the general English list and any additional we see sneaking \\n    through.  \"\"\"\\n    \\n    spacy_stop_words = STOP_WORDS\\n\\n    # more stop words that do not add meaning to topics\\n    additional_stopwords = {\\'addition\\', \\'specifically\\', \\'similar\\',\\'including\\', \\'particular\\', \\n                            \\'furthermore\\',\\'include\\', \\'includes\\',\\'overall\\', \\'finally\\', \\'specific\\', \\n                            \\'additional\\'} \\n           \\n    sw = spacy_stop_words.union(additional_stopwords)\\n    \\n    return sw\\n    \\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3786,9 +3758,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda-CO_BERT]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-CO_BERT-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3800,7 +3772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
