scrape ai related wiki articles

--- a/src/03_ai_wiki/03_id_ner.ipynb
+++ b/src/03_ai_wiki/03_id_ner.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e426b40561cf4d3a91ca10bc9732602d",
+       "model_id": "a457b36dcab44396b8850661b37b16bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,9 +44,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-06-27 17:38:42 INFO: Downloading default packages for language: en (English)...\n",
-      "2021-06-27 17:38:43 INFO: File exists: /home/zz3hs/stanza_resources/en/default.zip.\n",
-      "2021-06-27 17:38:48 INFO: Finished downloading models and saved to /home/zz3hs/stanza_resources.\n"
+      "2021-06-27 19:26:54 INFO: Downloading default packages for language: en (English)...\n",
+      "2021-06-27 19:26:54 INFO: File exists: /home/zz3hs/stanza_resources/en/default.zip.\n",
+      "2021-06-27 19:26:59 INFO: Finished downloading models and saved to /home/zz3hs/stanza_resources.\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[395 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "281"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Named entities that we are not considering:\n",
+    "### Named entities that we are sure to exclude from the links (topics):\n",
     "- Cardinal, just numbers, which wer are not concerned about that could be linked to another Wiki page\n",
     "- Product, such as Skype, kINECT, Xobx 360\n",
     "- Percent\n",
@@ -348,12 +348,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NER: Organization"
+    "### Named entities that we want to examine: \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NER: Organization (debatable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +437,7 @@
        " 'Multivac']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +522,7 @@
        " '1986']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +607,7 @@
        " 'Dick']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +663,7 @@
        " 'well as the novel Do Androids Dream of Electric Sheep']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +703,7 @@
        " 'Bostrom']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +731,7 @@
        "['East', 'San Francisco', 'West', 'Europe', 'Rodney Brooks', 'Earth']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +759,7 @@
        "['British', 'Bayesian', 'Americans', 'Chinese']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
