--- a/src/03_ai_wiki/05_scrape_ai_related_wiki.ipynb
+++ b/src/03_ai_wiki/05_scrape_ai_related_wiki.ipynb
@@ -3096,7 +3096,7 @@
     "    for paragraph in soup.select('p'):\n",
     "        texts += paragraph.text\n",
     "    articles = articles.append({\n",
-    "        \n",
+    "        \"link\": link,\n",
     "        \"url\": url,\n",
     "        'article': texts\n",
     "        }, ignore_index = True)"
