eads et al. LDA

--- a/src/02_term_matching/01_OECD_term_matching.ipynb
+++ b/src/02_term_matching/01_OECD_term_matching.ipynb
@@ -904,9 +904,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-CO_BERT]",
+   "display_name": "Python [conda env:.conda-HT_Bert]",
    "language": "python",
-   "name": "conda-env-.conda-CO_BERT-py"
+   "name": "conda-env-.conda-HT_Bert-py"
   },
   "language_info": {
    "codemirror_mode": {
