--- a/src/Summer-2020-approach/AI-corpus-creation-CZ.ipynb
+++ b/src/Summer-2020-approach/AI-corpus-creation-CZ.ipynb
@@ -4001,9 +4001,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-crystal_bert]",
+   "display_name": "Python 3.8",
    "language": "python",
-   "name": "conda-env-.conda-crystal_bert-py"
+   "name": "python-3.8"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4015,7 +4015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
