nmf model tuning

--- a/src/03_ai_wiki/07_embedding_score_final.ipynb
+++ b/src/03_ai_wiki/07_embedding_score_final.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently, it takes 9.663 seconds to run 100 abstracts. We are working with 690,815 abstract, which will take about 18.6 hours to run. "
+    "Currently rate is 40,000 abstracts per hour. "
    ]
   },
   {
@@ -36,7 +36,7 @@
     "import re\n",
     "\n",
     "import nltk\n",
-    "#nltk.download() #input: punkt\n",
+    "#nltk.download(\"punkt\")\n",
     "\n",
     "from nltk import tokenize\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "690814"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,17 +64,27 @@
     "embedder = SentenceTransformer('paraphrase-MiniLM-L6-v2') # this model provides quick model with high quality\n",
     "#embedder = SentenceTransformer('paraphrase-mpnet-base-v2') # this model provides the best quality\n",
     "\n",
-    "abstracts = pd.read_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/FR-cleaned-2021FEB24.pkl\")\n",
-    "len(abstracts)\n"
+    "abstracts = pd.read_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset.pkl\")\n",
+    "len(abstracts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "abstracts = abstracts.iloc[590853:690814]"
+    "#abstracts = abstracts.iloc[0:40000] #1.a\n",
+    "#abstracts = abstracts.iloc[40001:200001] #1.b\n",
+    "#abstracts = abstracts.iloc[80001:140000] #1.c\n",
+    "#abstracts = abstracts.iloc[140001:200000] #1.d\n",
+    "\n",
+    "\n",
+    "#abstracts = abstracts.iloc[200001:300000] #3\n",
+    "#abstracts = abstracts.iloc[300001:400000] #4\n",
+    "#abstracts = abstracts.iloc[400001:530000] #5\n",
+    "\n",
+    "#abstracts = abstracts.iloc[530001:690814] #6"
    ]
   },
   {
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,20 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time for calculating embeddings: 2021-07-12 09:04:56.323026\n"
+      "Start time for calculating embeddings: 2021-07-14 13:17:19.823037\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96311daeb1ec4c0680fc960b99a1eec9",
+       "model_id": "5028d0f4e33d4ccfb48c2c66d6d9011c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,6 +163,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished calculating  129999 of embedding score at 2021-07-14 16:28:19.929866\n",
+      "It took 3:11:00.106829 to run.\n"
+     ]
     }
    ],
    "source": [
@@ -162,7 +180,7 @@
     "\n",
     "ai_embeddings = get_corpus_embeddings(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/ai_wiki_text.txt\")\n",
     "\n",
-    "abstracts = abstracts.assign(score= abstracts[\"ABSTRACT\"].apply(lambda x: get_score(5,x,False)))\n",
+    "abstracts = abstracts.assign(score= abstracts[\"ABSTRACT\"].apply(lambda x: get_score(10,x,False)))\n",
     "\n",
     "end_time = datetime.datetime.now()\n",
     "print(\"Finished calculating \", len(abstracts), \"of\", \"embedding score at\", end_time)\n",
@@ -171,9 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start time for calculating average score: 2021-07-14 16:28:20.015391\n",
+      "Finished calculating  129999 of average score at 2021-07-14 16:28:58.215902\n",
+      "It took 0:00:38.200511 to run.\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = datetime.datetime.now()\n",
     "print(\"Start time for calculating average score:\", start_time)\n",
@@ -193,11 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "abstracts.to_csv(r'/home/zz3hs/git/dspg21RnD/data/dspg21RnD/abstracts_embedding_score_4.csv', index = False)   "
+    "abstracts.to_csv(r'/home/zz3hs/git/dspg21RnD/data/dspg21RnD/abstracts_embedding_score_5.csv', index = False)   "
    ]
   },
   {
